Changes
=======

All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.

1.8.18 (TBD)
------------

- If the certifi package can be imported, its certificate store location will
  be passed to GDAL during import of fiona._env unless CURL_CA_BUNDLE is
  already set.
- Warn when feature fields named "" are found (#955).

1.8.17 (2020-09-09)
-------------------

- To fix issue #952 the fio-cat command no longer cuts feature geometries at
  the anti-meridian by default. A --cut-at-antimeridian option has been added
  to allow cutting of geometries in a geographic destination coordinate
  reference system.

1.8.16 (2020-09-04)
-------------------

- More OGR errors and warnings arising in calls to GDAL C API functions are
  surfaced (#946).
- A circular import introduced in some cases in 1.8.15 has been fixed (#945).

1.8.15 (2020-09-03)
-------------------

- Change shim functions to not return tuples (#942) as a solution for the
  packaging problem reported in #941.
- Raise a Python exception when VSIFOpenL fails (#937).

1.8.14 (2020-08-31)
-------------------

- When creating a new Collection in a MemoryFile with a default (random) name
  Fiona will attempt to use a format driver-supported file extension (#934).
  When initializing a MemoryFile with bytes of data formatted for a vector
  driver that requires a certain file name or extension, the user should
  continue to pass an appropriate filename and/or extension.
- Read support for FlatGeobuf has been enabled in the drvsupport module.
- The MemoryFile implementation has been improved so that it can support multi-part
  S3 downloads (#906). This is largely a port of code from rasterio.
- Axis ordering for results of fiona.transform was wrong when CRS were passed
  in the "EPSG:dddd" form (#919). This has been fixed by (#926).
- Allow implicit access to the only dataset in a ZipMemoryFile. The path
  argument of ZipMemoryFile.open() is now optional (#928).