@@ -4,9 +4,6 @@
 import json
 import os
 import shutil
-import sys
-
-import pytest
 
 import fiona
 from fiona.fio.main import main_group
@@ -32,7 +29,6 @@ def test_collection(tmpdir, feature_collection, runner):
         main_group, ['load', '-f', 'Shapefile', tmpfile], feature_collection)
     assert result.exit_code == 0
     assert len(fiona.open(tmpfile)) == 2
-
 
 
 def test_seq_rs(feature_seq_pp_rs, tmpdir, runner):
@@ -123,3 +119,14 @@ def test_fio_load_layer(tmpdir, runner):
 
     finally:
         shutil.rmtree(outdir)
+
+
+def test_creation_optiona(tmpdir, runner, feature_seq):
+    tmpfile = str(tmpdir.mkdir("tests").join("test.shp"))
+    result = runner.invoke(
+        main_group,
+        ["load", "-f", "Shapefile", "--co", "ENCODING=LATIN1", tmpfile],
+        feature_seq,
+    )
+    assert result.exit_code == 0
+    assert tmpdir.join("tests/test.cpg").read() == "LATIN1"
