@@ -6,6 +6,7 @@ All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.
 1.8.18 (TBD)
 ------------
 
+- Added missing --co (creation) option to fio-load (#390).
 - If the certifi package can be imported, its certificate store location will
   be passed to GDAL during import of fiona._env unless CURL_CA_BUNDLE is
   already set.
